@@ -2,11 +2,9 @@ package jweblite.resource;
 
 import java.io.Serializable;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-
 import jweblite.web.page.FormModel;
 import jweblite.web.page.SkipException;
+import jweblite.web.page.WebContext;
 
 public interface WebResource extends Serializable {
 
@@ -41,29 +39,25 @@ public interface WebResource extends Serializable {
 	/**
 	 * Do Header
 	 * 
-	 * @param req
-	 *            HttpServletRequest
-	 * @param resp
-	 *            HttpServletResponse
+	 * @param context
+	 *            WebContext
 	 * @param formModel
 	 *            FormModel
 	 * @throws SkipException
 	 */
-	public void doHeader(HttpServletRequest req, HttpServletResponse resp,
-			FormModel formModel) throws SkipException;
+	public void doHeader(WebContext context, FormModel formModel)
+			throws SkipException;
 
 	/**
 	 * Do Body
 	 * 
-	 * @param req
-	 *            HttpServletRequest
-	 * @param resp
-	 *            HttpServletResponse
+	 * @param context
+	 *            WebContext
 	 * @param formModel
 	 *            FormModel
 	 * @throws SkipException
 	 */
-	public void doBody(HttpServletRequest req, HttpServletResponse resp,
-			FormModel formModel) throws SkipException;
+	public void doBody(WebContext context, FormModel formModel)
+			throws SkipException;
 
 }
