@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="jweblite" default="deploy" basedir=".">
 
-	<property name="version" value="0.5.1" />
+	<property name="version" value="0.6.0" />
 	<property name="externalLibPath" location="../../ex_lib" />
 	<property name="serverLibPath" location="../../apache-tomcat-5.5.35/common/lib" />
 	<tstamp>
